# Sailowtech-CTD

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-image.yml  mkdocs.yml
docs/: index.md  quick_usage_ctd.md  reference.md  supported-devices.md  terminology.md
docs/Hardware/: supported-devices.md
docs/Operating-System/: building.md  flashing.md  using-another-os.md
docs/hardware/: reference-implementation.md
docs/operating-system/: .pages  building.md  installing.md  using-another-os.md
docs/software/python-reference/: config-parser.md  ctd-class.md  sensors.md
hardware/: ctd-template-round-with-holes.kicad_pcb
hardware/ctd-base/: ctd-base.kicad_pcb  ctd-base.kicad_prl  ctd-base.kicad_sch  fp-info-cache
hardware/ctd-base-without-resistor-as-ordered/: ctd-base.kicad_pcb  ctd-base.kicad_prl  ctd-base.kicad_pro
hardware/ctd-double-isolator/: ctd-double-isolator.kicad_pcb  ctd-double-isolator.kicad_prl  ctd-double-isolator.kicad_pro  ctd-double-isolator.kicad_sch  fp-info-cache
hardware/reference-implementation/: index.html
hardware/supported-devices/: index.html
operating-system/building/: index.html
operating-system/installing/: index.html
operating-system/using-another-os/: index.html
os/: config
os/ctd-stage/: EXPORT_IMAGE
os/ctd-stage/00-install-ctd-software/: 00-packages  00-run-chroot.sh  00-run.sh
os/ctd-stage/01-setup-networks/: 00-packages  00-run-chroot.sh
os/ctd-stage/02-enable-i2c/: 00-run-chroot.sh
quick_usage_ctd/: index.html
reference/: index.html
software/ansible/: playbook.yml
software/ctd-collector/: config.yaml  main.py  requirements.txt
software/ctd-collector/models/: __init__.py  measurement.py
software/sailowtech-ctd-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
software/sailowtech_ctd/: __init__.py  __main__.py  common.py  config-mock.yaml  config.yaml  ctd.py  logger.py  requirements.txt
supported-devices/: index.html
terminology/: index.html
(+37 files in other folders)
