[tool.poetry]
name = "sailowtech-ctd"
version = "0.1.0"
description = ""
authors = ["Arthur Jacobs <arthur.jacobs@sailowtech.ch>",
    "Mauro"]
readme = "README.md"
packages = [{ include = "software/sailowtech_ctd" }]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.2"
smbus2 = "^0.4.3"
pony = "0.7.19"
fastapi = "0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
